// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FeatureRow /> matches expected output 1`] = `
.c1 {
  box-sizing: border-box;
}

.c4 {
  box-sizing: border-box;
  width: 100%;
}

.c10 {
  box-sizing: border-box;
  margin-left: 0px;
}

.c12 {
  box-sizing: border-box;
  padding-left: 0px;
}

.c19 {
  box-sizing: border-box;
  margin-bottom: 10px;
}

.c3 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c15 {
  box-sizing: border-box;
  padding-left: 0px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: left;
  color: #565656;
  font-size: 16px;
}

.c18 {
  font-family: MuseoSans;
  font-weight: 400;
  line-height: 1.2;
  text-align: left;
  color: #22b24e;
  font-size: 16px;
}

.c13 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: left;
  color: #FFF;
  font-size: 16px;
}

.c16 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: left;
  color: #1566ad;
  font-size: 16px;
}

.c20 {
  background: none;
  cursor: pointer;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  text-transform: uppercase;
  font-family: MuseoSans;
  font-weight: 900;
  width: 100%;
  padding: 18px 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  word-break: keep-all;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  border-radius: 3px;
  border-bottom-style: solid;
  color: #FFF;
  background: #ef8612;
  border-bottom-color: #e56209;
}

.c20:disabled {
  cursor: not-allowed;
}

.c20:hover,
.c20:focus {
  background: #e56209;
  border-bottom-color: #ef8612;
}

.c6 {
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c7 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0;
  overflow: hidden;
}

.c8 {
  min-width: 1px;
}

.c14 {
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: space-evenly;
  -webkit-justify-content: space-evenly;
  -ms-flex-pack: space-evenly;
  justify-content: space-evenly;
  -webkit-flex: 1 1 0%;
  -ms-flex: 1 1 0%;
  flex: 1 1 0%;
  min-height: 240px;
  padding-top: 10px;
}

.c5 {
  display: block;
  overflow: hidden;
}

.c11 {
  background: #2d9dd6;
  margin-top: 0;
}

.c11 p {
  line-height: 1.5;
  padding: 2px 0 0;
}

.c2 {
  width: 100%;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c9 {
  padding-bottom: 20px;
  padding-top: 20px;
  width: 350px;
}

@media screen and (min-width:32em) {
  .c4 {
    width: 100%;
  }
}

@media screen and (min-width:46em) {
  .c4 {
    width: 80%;
  }
}

@media screen and (min-width:32em) {
  .c10 {
    margin-left: 0px;
  }
}

@media screen and (min-width:46em) {
  .c10 {
    margin-left: -30px;
  }
}

@media screen and (min-width:32em) {
  .c12 {
    padding-left: 0px;
  }
}

@media screen and (min-width:46em) {
  .c12 {
    padding-left: 25%;
  }
}

@media screen and (min-width:32em) {
  .c3 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
  }
}

@media screen and (min-width:46em) {
  .c3 {
    -webkit-flex-direction: initial;
    -ms-flex-direction: initial;
    flex-direction: initial;
  }
}

@media screen and (min-width:32em) {
  .c15 {
    padding-left: 0px;
  }
}

@media screen and (min-width:46em) {
  .c15 {
    padding-left: 25%;
  }
}

@media (min-width:32em) {
  .c17 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c17 {
    font-size: 20px;
  }
}

@media (min-width:76em) {
  .c17 {
    font-size: 20px;
  }
}

@media (min-width:32em) {
  .c18 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c18 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c18 {
    font-size: 16px;
  }
}

@media (min-width:32em) {
  .c13 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c13 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c13 {
    font-size: 16px;
  }
}

@media (min-width:32em) {
  .c16 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c16 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c16 {
    font-size: 16px;
  }
}

<div>
  <div
    class="c0 c1"
  >
    <div
      class="c2 c3"
    >
      <div
        class="c4"
        width="1,1,80%"
      >
        <div
          class="c5"
        >
          <div
            class="c6 c1"
          >
            <div
              class="c7 c1"
            >
              <img
                alt=""
                class="c8"
                src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
              />
            </div>
          </div>
        </div>
      </div>
      <div
        class="c9 c10"
      >
        <div
          class="c11 c12"
        >
          <p
            class="c13 c1"
          >
            This is a header
          </p>
        </div>
        <div
          class="c14 c15"
        >
          <p
            class="c16 c1"
          >
            SAVE BIG
          </p>
          <h6
            class="c17 c1"
          >
            Up to 30% off + eGift Card
          </h6>
          <p
            class="c18 c19"
          >
            Here's the body
          </p>
          <a
            class="c20"
            color="accent"
            href="https://example.com"
            width="100%"
          >
            Join to save
          </a>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<FeatureTile /> matches expected output 1`] = `
.c3 {
  box-sizing: border-box;
  background: #FFF;
}

.c4 {
  box-sizing: border-box;
}

.c7 {
  box-sizing: border-box;
  padding-top: 4px;
}

.c15 {
  box-sizing: border-box;
  color: secondary;
}

.c17 {
  box-sizing: border-box;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 5px;
  padding-bottom: 5px;
}

.c18 {
  box-sizing: border-box;
  padding: 10px;
}

.c21 {
  box-sizing: border-box;
  padding-top: 8px;
  padding-bottom: 8px;
}

.c2 {
  border-radius: 4px;
  box-shadow: 0 0 1px rgba(67,90,111,0.3),0 8px 10px -4px rgba(67,90,111,0.47);
}

.c1 {
  border-radius: 4px;
}

.c6 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: center;
  color: #FFF;
  font-size: 16px;
}

.c16 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: left;
  color: #565656;
  font-size: 16px;
}

.c19 {
  font-family: MuseoSans;
  font-weight: 900;
  line-height: 1.2;
  text-align: left;
  color: #565656;
  font-size: 16px;
}

.c20 {
  font-family: MuseoSans;
  font-weight: 400;
  line-height: 1.2;
  text-align: left;
  color: #22b24e;
  font-size: 16px;
}

.c22 {
  background: none;
  cursor: pointer;
  border: none;
  padding: 0;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-size: 13px;
  -webkit-letter-spacing: 1px;
  -moz-letter-spacing: 1px;
  -ms-letter-spacing: 1px;
  letter-spacing: 1px;
  line-height: 1;
  text-transform: uppercase;
  font-family: MuseoSans;
  font-weight: 900;
  width: 100%;
  padding: 18px 30px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  white-space: nowrap;
  word-break: keep-all;
  text-align: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  border: none;
  border-radius: 3px;
  border-bottom-style: solid;
  color: #FFF;
  background: #ef8612;
  border-bottom-color: #e56209;
}

.c22:disabled {
  cursor: not-allowed;
}

.c22:hover,
.c22:focus {
  background: #e56209;
  border-bottom-color: #ef8612;
}

.c10 {
  max-width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c11 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-radius: 0;
  overflow: hidden;
}

.c12 {
  min-width: 1px;
}

.c14 {
  background: #2d9dd6;
  position: relative;
  width: 80%;
  margin-top: -10px;
}

.c14 p {
  color: #FFF;
  font-size: 14px;
}

.c8 {
  position: relative;
}

.c9 {
  display: block;
  overflow: hidden;
  max-height: 160px;
}

.c5 {
  background: #2d9dd6;
}

.c5 p {
  line-height: 1.5;
}

.c13 {
  min-width: 200px;
  width: 80%;
  display: block;
  position: relative;
}

.c13 p {
  display: block;
}

.c0 {
  max-width: 316px;
  margin: auto;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

@media screen and (min-width:32em) {
  .c21 {
    padding-top: 16px;
    padding-bottom: 16px;
  }
}

@media (min-width:32em) {
  .c6 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c6 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c6 {
    font-size: 16px;
  }
}

@media (min-width:32em) {
  .c16 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c16 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c16 {
    font-size: 16px;
  }
}

@media (min-width:32em) {
  .c19 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c19 {
    font-size: 20px;
  }
}

@media (min-width:76em) {
  .c19 {
    font-size: 20px;
  }
}

@media (min-width:32em) {
  .c20 {
    font-size: 16px;
  }
}

@media (min-width:46em) {
  .c20 {
    font-size: 16px;
  }
}

@media (min-width:76em) {
  .c20 {
    font-size: 16px;
  }
}

<div>
  <div
    class="c0 c1 c2 c3"
    elevation="2"
  >
    <div
      class="c4"
    >
      <div
        class="c5 c4"
      >
        <p
          class="c6 c7"
        >
          This is a header
        </p>
      </div>
      <div
        class="c8 c4"
      >
        <div
          class="c9"
        >
          <div
            class="c10 c4"
          >
            <div
              class="c11 c4"
            >
              <img
                alt=""
                class="c12"
                src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
              />
            </div>
          </div>
        </div>
        <div
          class="c13 c14 c15"
          color="secondary"
        >
          <p
            class="c16 c17"
          >
            SAVE BIG
          </p>
        </div>
      </div>
    </div>
    <div
      class="c18"
    >
      <h6
        class="c19 c4"
      >
        Up to 30% off + eGift Card
      </h6>
      <p
        class="c20 c21"
      >
        Here's the body
      </p>
    </div>
    <div
      class="c18"
    >
      <a
        class="c22"
        color="accent"
        href="https://example.com"
        width="100%"
      >
        Join to save
      </a>
    </div>
  </div>
  <div
    class="c0 c1 c2 c3"
    elevation="2"
  >
    <div
      class="c4"
    >
      <div
        class="c5 c4"
      >
        <p
          class="c6 c7"
        >
          This is a header
        </p>
      </div>
      <div
        class="c8 c4"
      >
        <div
          class="c9"
        >
          <div
            class="c10 c4"
          >
            <div
              class="c11 c4"
            >
              <img
                alt=""
                class="c12"
                src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
              />
            </div>
          </div>
        </div>
        <div
          class="c13 c14 c15"
          color="secondary"
        >
          <p
            class="c16 c17"
          >
            SPECIAL OFFER
          </p>
        </div>
      </div>
    </div>
    <div
      class="c18"
    >
      <h6
        class="c19 c4"
      >
        Save up to $400 a year!
      </h6>
      <p
        class="c20 c21"
      >
        Worried about your caravan getting trashed? Well, we can’t help you, get a real house and we’ll talk...
      </p>
    </div>
    <div
      class="c18"
    >
      <a
        class="c22"
        color="accent"
        href="https://example.com"
        width="100%"
      >
        Join to save
      </a>
    </div>
  </div>
  <div
    class="c0 c1 c2 c3"
    elevation="2"
  >
    <div
      class="c4"
    >
      <div
        class="c5 c4"
      >
        <p
          class="c6 c7"
        >
          This is some content
        </p>
      </div>
      <div
        class="c8 c4"
      >
        <div
          class="c9"
        >
          <div
            class="c10 c4"
          >
            <div
              class="c11 c4"
            >
              <img
                alt=""
                class="c12"
                src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/53/homepage_tile/original.jpg"
              />
            </div>
          </div>
        </div>
        <div
          class="c13 c14 c15"
          color="secondary"
        >
          <p
            class="c16 c17"
          >
            GET A QUOTE
          </p>
        </div>
      </div>
    </div>
    <div
      class="c18"
    >
      <h6
        class="c19 c4"
      >
        Save up to $400 a year!
      </h6>
      <p
        class="c20 c21"
      >
        Life is too short to not have a pet duck. My ducks name is Szechuan.
      </p>
    </div>
    <div
      class="c18"
    >
      <a
        class="c22"
        color="accent"
        href="https://example.com"
        width="100%"
      >
        Join to save
      </a>
    </div>
  </div>
</div>
`;

exports[`<FeatureTile /> matches expected output 2`] = `
<div>
  <div
    class="sc-bdVaJa sc-kkGfuU dxaIlE sc-ifAKCX cieEPW sc-bxivhb hTrpYv sc-htpNat gbiVfa"
    elevation="2"
  >
    <div
      class="sc-bdVaJa sc-htpNat eXbiIh"
    >
      <div
        class="sc-bdVaJa sc-hMqMXs eDwjCD sc-htpNat eXbiIh"
      >
        <p
          class="sc-bdVaJa sc-bZQynM cXBwDV sc-htpNat huzCz"
        >
          This is a header
        </p>
      </div>
      <div
        class="sc-bdVaJa sc-cSHVUG hDUXUW sc-htpNat eXbiIh"
      >
        <div
          class="sc-eNQAEJ dsBTUL"
        >
          <div
            class="sc-bdVaJa sc-VigVT cVDEYE sc-htpNat eXbiIh"
          >
            <div
              class="sc-bdVaJa sc-jTzLTM cTDwnD sc-htpNat eXbiIh"
            >
              <img
                alt=""
                class="sc-fjdhpX bLYCUj"
                src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa sc-kEYyzF upHON sc-jzJRlG hKyiyc sc-htpNat iVbxNQ"
          color="secondary"
        >
          <p
            class="sc-bdVaJa sc-bZQynM jeKhNq sc-htpNat jqnzec"
          >
            SAVE BIG
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-htpNat SxJjp"
    >
      <h6
        class="sc-bdVaJa sc-bZQynM fdgFmQ sc-htpNat eXbiIh"
      >
        Up to 30% off + eGift Card
      </h6>
      <p
        class="sc-bdVaJa sc-bZQynM jMcAfe sc-htpNat ePsWuG"
      >
        Here's the body
      </p>
    </div>
    <div
      class="sc-bdVaJa sc-htpNat SxJjp"
    >
      <a
        class="sc-htoDjs jQrbTb"
        color="accent"
        href="https://example.com"
        width="100%"
      >
        Join to save
      </a>
    </div>
  </div>
  <div
    class="sc-bdVaJa sc-kkGfuU dxaIlE sc-ifAKCX cieEPW sc-bxivhb hTrpYv sc-htpNat gbiVfa"
    elevation="2"
  >
    <div
      class="sc-bdVaJa sc-htpNat eXbiIh"
    >
      <div
        class="sc-bdVaJa sc-hMqMXs eDwjCD sc-htpNat eXbiIh"
      >
        <p
          class="sc-bdVaJa sc-bZQynM cXBwDV sc-htpNat huzCz"
        >
          This is a header
        </p>
      </div>
      <div
        class="sc-bdVaJa sc-cSHVUG hDUXUW sc-htpNat eXbiIh"
      >
        <div
          class="sc-eNQAEJ dsBTUL"
        >
          <div
            class="sc-bdVaJa sc-VigVT cVDEYE sc-htpNat eXbiIh"
          >
            <div
              class="sc-bdVaJa sc-jTzLTM cTDwnD sc-htpNat eXbiIh"
            >
              <img
                alt=""
                class="sc-fjdhpX bLYCUj"
                src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa sc-kEYyzF upHON sc-jzJRlG hKyiyc sc-htpNat iVbxNQ"
          color="secondary"
        >
          <p
            class="sc-bdVaJa sc-bZQynM jeKhNq sc-htpNat jqnzec"
          >
            SPECIAL OFFER
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-htpNat SxJjp"
    >
      <h6
        class="sc-bdVaJa sc-bZQynM fdgFmQ sc-htpNat eXbiIh"
      >
        Save up to $400 a year!
      </h6>
      <p
        class="sc-bdVaJa sc-bZQynM jMcAfe sc-htpNat ePsWuG"
      >
        Worried about your caravan getting trashed? Well, we can’t help you, get a real house and we’ll talk...
      </p>
    </div>
    <div
      class="sc-bdVaJa sc-htpNat SxJjp"
    >
      <a
        class="sc-htoDjs jQrbTb"
        color="accent"
        href="https://example.com"
        width="100%"
      >
        Join to save
      </a>
    </div>
  </div>
  <div
    class="sc-bdVaJa sc-kkGfuU dxaIlE sc-ifAKCX cieEPW sc-bxivhb hTrpYv sc-htpNat gbiVfa"
    elevation="2"
  >
    <div
      class="sc-bdVaJa sc-htpNat eXbiIh"
    >
      <div
        class="sc-bdVaJa sc-hMqMXs eDwjCD sc-htpNat eXbiIh"
      >
        <p
          class="sc-bdVaJa sc-bZQynM cXBwDV sc-htpNat huzCz"
        >
          This is some content
        </p>
      </div>
      <div
        class="sc-bdVaJa sc-cSHVUG hDUXUW sc-htpNat eXbiIh"
      >
        <div
          class="sc-eNQAEJ dsBTUL"
        >
          <div
            class="sc-bdVaJa sc-VigVT cVDEYE sc-htpNat eXbiIh"
          >
            <div
              class="sc-bdVaJa sc-jTzLTM cTDwnD sc-htpNat eXbiIh"
            >
              <img
                alt=""
                class="sc-fjdhpX bLYCUj"
                src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/53/homepage_tile/original.jpg"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa sc-kEYyzF upHON sc-jzJRlG hKyiyc sc-htpNat iVbxNQ"
          color="secondary"
        >
          <p
            class="sc-bdVaJa sc-bZQynM jeKhNq sc-htpNat jqnzec"
          >
            GET A QUOTE
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-htpNat SxJjp"
    >
      <h6
        class="sc-bdVaJa sc-bZQynM fdgFmQ sc-htpNat eXbiIh"
      >
        Save up to $400 a year!
      </h6>
      <p
        class="sc-bdVaJa sc-bZQynM jMcAfe sc-htpNat ePsWuG"
      >
        Life is too short to not have a pet duck. My ducks name is Szechuan.
      </p>
    </div>
    <div
      class="sc-bdVaJa sc-htpNat SxJjp"
    >
      <a
        class="sc-htoDjs jQrbTb"
        color="accent"
        href="https://example.com"
        width="100%"
      >
        Join to save
      </a>
    </div>
  </div>
</div>
`;

exports[`<FeatureTile /> matches expected output 3`] = `
<div>
  <div
    class="sc-bdVaJa sc-kkGfuU dxaIlE sc-ifAKCX cieEPW sc-bxivhb hTrpYv sc-htpNat gbiVfa"
    elevation="2"
  >
    <div
      class="sc-bdVaJa sc-htpNat eXbiIh"
    >
      <div
        class="sc-bdVaJa sc-hMqMXs eDwjCD sc-htpNat eXbiIh"
      >
        <p
          class="sc-bdVaJa sc-bZQynM cXBwDV sc-htpNat huzCz"
        >
          This is a header
        </p>
      </div>
      <div
        class="sc-bdVaJa sc-cSHVUG hDUXUW sc-htpNat eXbiIh"
      >
        <div
          class="sc-eNQAEJ dsBTUL"
        >
          <div
            class="sc-bdVaJa sc-VigVT cVDEYE sc-htpNat eXbiIh"
          >
            <div
              class="sc-bdVaJa sc-jTzLTM cTDwnD sc-htpNat eXbiIh"
            >
              <img
                alt=""
                class="sc-fjdhpX bLYCUj"
                src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa sc-kEYyzF upHON sc-jzJRlG hKyiyc sc-htpNat iVbxNQ"
          color="secondary"
        >
          <p
            class="sc-bdVaJa sc-bZQynM jeKhNq sc-htpNat jqnzec"
          >
            SAVE BIG
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-htpNat SxJjp"
    >
      <h6
        class="sc-bdVaJa sc-bZQynM fdgFmQ sc-htpNat eXbiIh"
      >
        Up to 30% off + eGift Card
      </h6>
      <p
        class="sc-bdVaJa sc-bZQynM jMcAfe sc-htpNat ePsWuG"
      >
        Here's the body
      </p>
    </div>
    <div
      class="sc-bdVaJa sc-htpNat SxJjp"
    >
      <a
        class="sc-htoDjs jQrbTb"
        color="accent"
        href="https://example.com"
        width="100%"
      >
        Join to save
      </a>
    </div>
  </div>
  <div
    class="sc-bdVaJa sc-kkGfuU dxaIlE sc-ifAKCX cieEPW sc-bxivhb hTrpYv sc-htpNat gbiVfa"
    elevation="2"
  >
    <div
      class="sc-bdVaJa sc-htpNat eXbiIh"
    >
      <div
        class="sc-bdVaJa sc-hMqMXs eDwjCD sc-htpNat eXbiIh"
      >
        <p
          class="sc-bdVaJa sc-bZQynM cXBwDV sc-htpNat huzCz"
        >
          This is a header
        </p>
      </div>
      <div
        class="sc-bdVaJa sc-cSHVUG hDUXUW sc-htpNat eXbiIh"
      >
        <div
          class="sc-eNQAEJ dsBTUL"
        >
          <div
            class="sc-bdVaJa sc-VigVT cVDEYE sc-htpNat eXbiIh"
          >
            <div
              class="sc-bdVaJa sc-jTzLTM cTDwnD sc-htpNat eXbiIh"
            >
              <img
                alt=""
                class="sc-fjdhpX bLYCUj"
                src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/26/homepage_tile/original.jpg"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa sc-kEYyzF upHON sc-jzJRlG hKyiyc sc-htpNat iVbxNQ"
          color="secondary"
        >
          <p
            class="sc-bdVaJa sc-bZQynM jeKhNq sc-htpNat jqnzec"
          >
            SPECIAL OFFER
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-htpNat SxJjp"
    >
      <h6
        class="sc-bdVaJa sc-bZQynM fdgFmQ sc-htpNat eXbiIh"
      >
        Save up to $400 a year!
      </h6>
      <p
        class="sc-bdVaJa sc-bZQynM jMcAfe sc-htpNat ePsWuG"
      >
        Worried about your caravan getting trashed? Well, we can’t help you, get a real house and we’ll talk...
      </p>
    </div>
    <div
      class="sc-bdVaJa sc-htpNat SxJjp"
    >
      <a
        class="sc-htoDjs jQrbTb"
        color="accent"
        href="https://example.com"
        width="100%"
      >
        Join to save
      </a>
    </div>
  </div>
  <div
    class="sc-bdVaJa sc-kkGfuU dxaIlE sc-ifAKCX cieEPW sc-bxivhb hTrpYv sc-htpNat gbiVfa"
    elevation="2"
  >
    <div
      class="sc-bdVaJa sc-htpNat eXbiIh"
    >
      <div
        class="sc-bdVaJa sc-hMqMXs eDwjCD sc-htpNat eXbiIh"
      >
        <p
          class="sc-bdVaJa sc-bZQynM cXBwDV sc-htpNat huzCz"
        >
          This is some content
        </p>
      </div>
      <div
        class="sc-bdVaJa sc-cSHVUG hDUXUW sc-htpNat eXbiIh"
      >
        <div
          class="sc-eNQAEJ dsBTUL"
        >
          <div
            class="sc-bdVaJa sc-VigVT cVDEYE sc-htpNat eXbiIh"
          >
            <div
              class="sc-bdVaJa sc-jTzLTM cTDwnD sc-htpNat eXbiIh"
            >
              <img
                alt=""
                class="sc-fjdhpX bLYCUj"
                src="https://d2v1ej1mp9x364.cloudfront.net/campaigns/53/homepage_tile/original.jpg"
              />
            </div>
          </div>
        </div>
        <div
          class="sc-bdVaJa sc-kEYyzF upHON sc-jzJRlG hKyiyc sc-htpNat iVbxNQ"
          color="secondary"
        >
          <p
            class="sc-bdVaJa sc-bZQynM jeKhNq sc-htpNat jqnzec"
          >
            GET A QUOTE
          </p>
        </div>
      </div>
    </div>
    <div
      class="sc-bdVaJa sc-htpNat SxJjp"
    >
      <h6
        class="sc-bdVaJa sc-bZQynM fdgFmQ sc-htpNat eXbiIh"
      >
        Save up to $400 a year!
      </h6>
      <p
        class="sc-bdVaJa sc-bZQynM jMcAfe sc-htpNat ePsWuG"
      >
        Life is too short to not have a pet duck. My ducks name is Szechuan.
      </p>
    </div>
    <div
      class="sc-bdVaJa sc-htpNat SxJjp"
    >
      <a
        class="sc-htoDjs jQrbTb"
        color="accent"
        href="https://example.com"
        width="100%"
      >
        Join to save
      </a>
    </div>
  </div>
</div>
`;
